# nib

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  build.rs  pyproject.toml
.github/workflows/: release.yml
agents/memory/: README.md  changelog.md  decisions.md
docs/projects/nib/: inventory.md
docs/specs/: README.md
docs/specs/done/: D001_workspace_docs_adoption_and_foundational_spec_alignment.md  ft_003_adopt_codex_sandboxing.md  ft_004_llm_integration_and_agent_loop.md
docs/specs/feature/: ft_001_basic_agent_tools.md  ft_002_base_architecture.md  ft_003_adopt_codex_sandboxing.md  ft_004_llm_integration_and_agent_loop.md
docs/specs/foundation/: product.md
docs/specs/task/: T001_implement_core_agent_tools.md  T002_agent_framework_runtime_and_orchestration_engine.md  T003_context_engine_with_dynamic_compression_and_session_management.md  T004_profiles_discrete_memory_store_and_maintenance_daemons.md  T005_full_runtime_state_machine_and_lifecycle.md  T006_enhanced_skills_framework_and_mcp_gateway_alignment.md  T007_configuration_schema_alignment_and_nib_doctor_validation.md  T008_end_to_end_tests_and_sequence_diagram_validation.md
docs/standards/workspace-docs/: README.md
docs/tech/: architecture.md  backend_python.md  ci.md  ecosystem_integration.md  permissions.md  project_structure.md  sdlc.md  task.md
scripts/: first-time-setup.sh  install.ps1  install.sh
src/: auth.rs  chat.rs  config.rs  context_cmd.rs  main.rs  run.rs  session.rs  updater.rs  version.rs
src/nib/: __init__.py  __main__.py  config.py
src/nib/agent/: __init__.py  loop.py
src/nib/cli/: __init__.py  app.py
src/nib/context/: __init__.py  agents.py  loader.py
src/nib/core/: __init__.py  models.py  workload.py
src/nib/integrations/: mcp.py
src/nib/llm/: __init__.py  base.py
src/nib/skills/: __init__.py  discovery.py  loader.py
src/nib/tools/: __init__.py  executor.py  (+4 more)
tests/: test_models.py  test_tools.py
(+2 files in other folders)
